[package]
name = "bcache-recovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom="7.1"
thiserror = "1.0.30"
modular-bitfield = "0.11.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "*"
